[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "topologicpy"
version = "0.1.7"
authors = [
  { name="Wassim Jabi", email="wassim.jabi@gmail.com" },
]
description = "Topologic"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wassimj/TopologicPySt"
"Bug Tracker" = "https://github.com/wassimj/TopologicPySt/issues"